tests/implements/implements.exp
Error ------------------------------------------------------------------------------------------------------ test.js:7:7

Cannot implement `IFoo` [1] with `C1` because property `foo` is missing in `C1` [2] but exists in `IFoo` [1].
[incompatible-type]

   test.js:7:7
   7| class C1 implements IFoo {} // error: property `foo` not found
            ^^ [2]

References:
   test.js:7:21
   7| class C1 implements IFoo {} // error: property `foo` not found
                          ^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:9:8

Cannot implement `IFoo` [1] with `C2` because number [2] is incompatible with string [3] in property `foo`.
[incompatible-type]

   test.js:9:8
   9|   foo: number;
             ^^^^^^ [2]

References:
   test.js:8:21
   8| class C2 implements IFoo {
                          ^^^^ [1]
   test.js:4:8
   4|   foo: string;
             ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:21:7

Cannot implement `IFoo` [1] with `C4` because property `foo` is missing in `C4` [2] but exists in `IFoo` [1].
[incompatible-type]

   test.js:21:7
   21| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
             ^^ [2]

References:
   test.js:21:21
   21| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
                           ^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:21:7

Cannot implement `IBar` [1] with `C4` because property `bar` is missing in `C4` [2] but exists in `IBar` [1].
[incompatible-type]

   test.js:21:7
   21| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
             ^^ [2]

References:
   test.js:21:27
   21| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
                                 ^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:28:7

Cannot implement `IFooBar` [1] with `C5` because property `bar` is missing in `C5` [2] but exists in `IFooBar` [1].
[incompatible-type]

   test.js:28:7
   28| class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
             ^^ [2]

References:
   test.js:28:21
   28| class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
                           ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:28:7

Cannot implement `IFooBar` [1] with `C5` because property `foo` is missing in `C5` [2] but exists in `IFoo` [1].
[incompatible-type]

   test.js:28:7
   28| class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
             ^^ [2]

References:
   test.js:28:21
   28| class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
                           ^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:31:1

Cannot cast `new C5()` to `IBar` because property `bar` is missing in `C5` [1] but exists in `IBar` [2].
[incompatible-type]

   test.js:31:1
   31| new C5() as IBar; // error: property `bar` not found (despite IBar < IFooBar)
       ^^^^^^^^ [1]

References:
   test.js:31:13
   31| new C5() as IBar; // error: property `bar` not found (despite IBar < IFooBar)
                   ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:36:21

Cannot implement `C1` because it is not an interface. [cannot-implement]

   36| class C7 implements C1 {} // error: C1 is a class, expected an interface
                           ^^



Found 8 errors
